fix: event title overflow

--- a/styles/CardEvento.module.css
+++ b/styles/CardEvento.module.css
@@ -1,5 +1,6 @@
 .moldura {
     margin: 5rem 1rem;
+		padding: 1rem 0;
     
     font-size: 1.6rem;
 
@@ -9,13 +10,12 @@
     font-weight: bold;
       
 
-
     width: 15rem;
     height: 15rem;
 
     display: flex;
     flex-flow: column nowrap;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     flex-shrink: 0;
 
@@ -24,7 +24,9 @@
 }
 
 .moldura p {
-    padding: 3rem;
+		font-size: 1.4rem;
+		text-align: center;
+		text-wrap: balance;
 }
 
 .titulo {
@@ -45,7 +47,7 @@
     cursor: pointer;
     font-size: 2rem;
     text-decoration: none;
-    color: #333;
+    color: var(--corAction);
     border: none;
     background-color: transparent;
 }
